feat: jdk21 风格调整 注释 日志完善统一